@@ -3,6 +3,7 @@
 	* libxklavier/xkl_config_item.h, libxklavier/xkl_config_registry.h,
 	doc/reference: a bit of cleanup for gtkdoc
 	* NEWS: preparing 3.6
+	* libxklavier/xklavier_config_iso.c: C99 fix
 
 2008-04-26 svu
 
